@@ -26,13 +26,15 @@ public:
 	
 	void createTeleporterTable(unsigned char *p_exedata);
 	int getTeleporterInfo(int objectID);
-	void readTeleportDestCoordinates(int objectID, int &destx, int &desty);
 	void teleportPlayer(int objectID, CMap &map, std::vector<CObject> &p_vect_object, CPlayer &player);
 	
 private:
 	//CMap &m_map;
     short m_episode;
     std::vector<stTeleporterTable> &m_TeleportTable;
+
+	void readTeleportDestCoordinatesEP1(int objectID, int &destx, int &desty);
+	void readTeleportDestCoordinatesEP3(int objectID, CMap &map,int &destx, int &desty);
 };
 
 #endif /* CTELEPORTER_H_ */
